css/src/_layout.scss
.layout-container {
	@include xy-grid-container($break-xlarge, 0);
}

.cell-gutter-lr {
	margin: {
		left: $grid-margin-gutters / 2;
		right: $grid-margin-gutters / 2;
	}
}

.cell-gutter-lr-x2 {
	margin: {
		left: $grid-margin-gutters;
		right: $grid-margin-gutters;
	}
}

.grid-x {
	@include xy-grid;

	> .cell {
		@include xy-gutters;
		flex: 0 0 auto;
		min-width: 0;
		min-height: 0;

		&.shrink,
		&.auto {
			width: auto;
		}

		&.auto {
			flex: 1 1 0px;
		}

		&.collapse-left {
			margin-left: 0;
		}

		&.collapse-right {
			margin-right: 0;
		}

		&.small-3 {
			@include xy-cell(3, false);
		}

		&.small-4 {
			@include xy-cell(4, false);
		}

		&.small-6 {
			@include xy-cell(6, false);
		}

		&.small-8 {
			@include xy-cell(8, false);
		}

		&.small-9 {
			@include xy-cell(9, false);
		}

		&.small-12 {
			@include xy-cell(12, false);
		}

		@include breakpoint(small only) {

			&.small-4-collapse {
				@include xy-cell(4, true, 0);
			}

			&.small-4-collapse-half {
				@include xy-cell(4, false, $grid-margin-gutters / 2);
			}

			&.small-8-collapse-half {
				@include xy-cell(8, false, $grid-margin-gutters / 2);
			}

			&.small-12-collapse {
				@include xy-cell(12, true, 0);
			}

			&.small-collapse-left {
				@include xy-gutters($gutter-position: right);
				margin-left: 0;
			}

			&.small-collapse-right {
				@include xy-gutters($gutter-position: left);
				margin-right: 0;
			}

			&.small-order-1 {
				order: 1;
			}

			&.small-order-2 {
				order: 2;
			}

			&.small-order-3 {
				order: 3;
			}
		}

		@include breakpoint(medium) {

			&.medium-shrink {
				width: auto;
			}

			&.medium-auto {
				width: auto;
				flex: 1 1 0px;
			}

			&.medium-2 {
				@include xy-cell(2, false);
			}

			&.medium-2-collapse-half {
				@include xy-cell(2, false, $grid-margin-gutters / 2);
			}

			&.medium-4 {
				@include xy-cell(4, false);
			}

			&.medium-4-collapse-half {
				@include xy-cell(4, false, $grid-margin-gutters / 2);
			}

			&.medium-6 {
				@include xy-cell(6, false);
			}

			&.medium-6-collapse {
				@include xy-cell(6, true, 0);
			}

			&.medium-6-collapse-half {
				@include -xy-cell-properties(50%, $grid-margin-gutters / 2, false);
			}

			&.medium-8 {
				@include xy-cell(8, false);
			}

			&.medium-8-collapse-half {
				@include -xy-cell-properties(66.6666%, $grid-margin-gutters / 2, false);
			}

			&.medium-10 {
				@include xy-cell(10, false);
			}

			&.medium-12 {
				@include xy-cell(12, false);
			}

			&.medium-12-collapse {
				@include xy-cell(12, true, 0);
			}

			&.medium-collapse-left {
				@include xy-gutters($gutter-position: right);
				margin-left: 0;
			}

			&.medium-collapse-right {
				@include xy-gutters($gutter-position: left);
				margin-right: 0;
			}

			&.medium-order-1 {
				order: 1;
			}

			&.medium-order-2 {
				order: 2;
			}
		}
	}
}

